--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -6,7 +6,7 @@
     <title>Apple Pie Recipe</title>
    
     <!-- Remember to link your styles -->
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/apple-pie/styles/style.css">
 
   </head>
   <body>
@@ -23,7 +23,7 @@
           be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
           favorites as well!
         </article>
-        <img src="/images/recipe-info.png" alt="recipe info"> 
+        <img src="/apple-pie/images/recipe-info.png" alt="recipe info"> 
       </section>
 
 
@@ -41,7 +41,7 @@
             <li>1/2 cup packed brown sugar</li>
             <li>8 Granny Smith apples - peeled, cored and sliced</li>
           </ul>
-          <img src="/images/cooking-info.png" alt="cooking info">
+          <img src="/apple-pie/images/cooking-info.png" alt="cooking info">
       </section>  
 
    <section id="directions">
